# SHA256-WM

./: CMakeLists.txt  README.md  build.sh  dependencies.txt  medium_file.txt  server.txt  test.sh  test1.sh
include/: common.h  server_structs.h  server_utils.h
src/: client.c  common.c  server.c  server_utils.c
